<resources>
    <string name="app_name">My Application</string>
    <string name="sign_in_button">sign in</string>
    <string name="sign_up_button">sign up</string>
    <string name="pick_date_button">birthdate</string>
    <string name="submit_changes">submit changes</string>
    <string name="sign_up_complete_button">complete sign up</string>
    <string name="tweet_button">tweet</string>
    <string name="follow_button">follow</string>
    <string name="unfollow_button">unfollow</string>
    <string name="edit_profile_button">edit profile</string>
    <string name="username_field">\@%1$s</string>
    <string name="date_joined_field">Joined %1$s %2$d</string>

    <string name="block_options_title">options</string>
    <string-array name="block_options">
        <item>Block</item>
        <item>Unblock</item>
    </string-array>

    <string name="block_success">user blocked successfully</string>
    <string name="already_blocked">you have already blocked this user</string>

    <string name="unblock_success">user unblocked successfully</string>
    <string name="not_blocked">you have not blocked this user</string>

    <string name="follow_success">user followed successfully</string>
    <string name="already_followed">you are already following this user</string>

    <string name="unfollow_success">user unfollowed successfully</string>
    <string name="not_followed">you are not following this user</string>
    <string name="retweeted_by">Retweeted by %1$s</string>

    <string name="username_or_email_field_hint"><font size="30">username or email</font></string>
    <string name="password_field_hint"><font size="30">password</font></string>
    <string name="repeat_password_field_hint"><font size="30">repeat password</font></string>
    <string name="name_field_hint"><font size="30">account name</font></string>
    <string name="email_field_hint"><font size="30">example@example.com</font></string>
    <string name="username_field_hint"><font size="30">@username</font></string>
    <string name="tweet_field_hint">what\'s happening?</string>
    <string name="mention_field_hint">Replying to \@%1$s</string>
    <string name="quote_field_hint">Quoting from \@%1$s</string>

    <string name="name_field_title">Name</string>
    <string name="biography_field_title">Bio</string>
    <string name="location_field_title">Location</string>

    <string name="sign_up_page">sign up</string>
    <string name="sign_in_page">sign in</string>

    <string name="invalid_email_format">invalid email format</string>
    <string name="invalid_password_format">invalid password format</string>
    <string name="invalid_username_format">invalid username format</string>

    <string name="sign_in_success">sign in successful…</string>
    <string name="wrong_user_pass">wrong username or password</string>
    <string name="internal_server_error">internal server error</string>
    <string name="passwords_dont_match">passwords don\'t match</string>
    <string name="weak_password">weak password</string>
    <string name="username_taken">username taken</string>
    <string name="email_taken">there\'s an existing account with this email</string>
    <string name="sign_up_success">sign up success</string>

    <string name="tweet_successful">tweet sent successfully!</string>
    <string name="tweet_failed">sending tweet failed!</string>
    <string name="profile_updated">profile updated successfully!</string>

    <string name="test_tweet_text">Welcome to my Twitter page! I\'m currently learning and exploring the fascinating world of Android Development. Having fun creating a RecyclerView to show different tweets. It\'s intriguing how you can bring your creative ideas to life with code. Stay tuned for more updates! #AndroidDev</string>

    <string name="follower_count"><b>%1$d</b> followers</string>
    <string name="following_count"><b>%1$d</b> followings</string>

</resources>