<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_m"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserProfileActivity"
    android:background="@color/white"
    android:elevation="@dimen/margin_m">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_picture_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="@dimen/margin_m"
        android:src="@drawable/header_placeholder"
        android:scaleType="centerCrop"
        />

    <include layout="@layout/horizontal_line_break"
        app:layout_constraintTop_toBottomOf="@id/header_picture"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.widget.Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_icon_height"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.95"
        android:textSize="@dimen/button_textSize_s"
        style="@style/default_button_style"
        android:visibility="invisible"
        android:text="@string/follow_button" />

    <android.widget.Button
        android:id="@+id/unfollow_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_icon_height"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.95"
        android:textSize="@dimen/button_textSize_s"
        android:text="@string/unfollow_button"
        android:visibility="invisible"
        style="@style/default_button_style"/>

    <android.widget.Button
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_icon_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.95"
        android:text="@string/edit_profile_button"
        android:visibility="invisible"
        style="@style/hollow_button_style"
        />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/max_profile_picture_height"
        android:layout_height="@dimen/max_profile_picture_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.50"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        android:src="@drawable/profile_placeholder"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_bold"
        android:textSize="@dimen/view_title_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        tools:text="Elon Musk"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_name"

        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="@dimen/view_title_size_small"
        android:fontFamily="@font/segoe"
        android:alpha="0.6"
        tools:text="\@Elon_Musk"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/biography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/biography_text_view_max_width"
        android:layout_marginTop="@dimen/margin_s"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        tools:text="This is Elon musk, inventor and CEO of twitter."/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/biography"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/following_count"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/follower_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/biography"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/follower_count"/>

</androidx.constraintlayout.widget.ConstraintLayout>